# wca-competition-reminder

./: .gitignore  LICENSE  README.md  README.zh-CN.md  clear_database.py  config.example.toml  ecosystem.config.js  main.py  pyproject.toml
config/: email_templates.toml
tests/: conftest.py  test_admin.py  test_clear_database.py  test_cli.py  test_config.py  test_distance_and_email.py  test_events.py  test_mailer.py  test_service.py  test_state.py  test_subscriptions.py  test_wca.py
wca_competition_reminder/: __init__.py  cli.py  config.py  distance.py  email_content.py  email_templates.py  events.py  locking.py  mailer.py  models.py  service.py  state.py  subscriptions.py  utils.py  wca.py  web.py
wca_competition_reminder/web_assets/: admin.css  admin.html  admin.js  app.js  index.html  styles.css
