[project]
name = "wca-competition-reminder"
version = "0.1.1"
description = "Poll WCA competitions and email personalized event reminders"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "ruff>=0.15.21,<0.16",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
ignore = ["RUF001"] # Chinese email copy intentionally uses full-width punctuation.
